data/all_generated_tests/raw_wast_tests/nop_IncorrectBranchTargetResolution_49.wast
;; 10. **Mixed Control Flow Instructions with Nop**: Design a complex control flow involving `if`, `block`, `loop`, and `br` that includes strategically placed `nops`. The test should verify if the branches correctly resolve the intended targets by ensuring `nop` does not mislead the branch resolution in the intricate control flow scenario.

(assert_invalid
  (module
    (func $mixed-control (param $x i32) (result i32)
      (local $y i32)
      (block $block0
        (block $block1
          (loop $loop1
            (if $if1 (i32.eqz (local.get $x))
              (then 
                (nop)
                (br $block1)
              )
            )
            (local.set $y (i32.add (local.get $x) (i32.const 1)))
            (br $loop1)
          )
          (nop)
          (local.set $y (i32.add (local.get $x) (i32.const 2)))
        )
        (local.set $y (i32.add (local.get $y) (i32.const 3)))
      )
      (local.get $y)
    )
  )
  "type mismatch"
)